[package]
name = "match_err"
version = "0.1.5"
edition = "2021"
homepage = "https://github.com/blkmlk/match_err"
license = "MIT"
description = "Macro for matching enum-like errors"
keywords = ["macro", "anyhow", "downcast", "error", "match"]
categories = ["development-tools::testing"]
repository = "https://github.com/blkmlk/match_err"
readme = "README.md"

[dependencies]

[dev-dependencies]
thiserror = "1.0.63"
anyhow = "1.0.86"